new update script for windows